@@ -1,3 +1,9 @@
+2008-03-18 Martin Schaaf <mascha@ma-scha.de>
+
+	* src/MMapArea.py
+	* src/MainWindow.py
+	o update color button when selecting thought (patch by Matthias Vogelgesang)
+
 2008-03-03 Martin Schaaf <mascha@ma-scha.de>
 
 	* ChangeLog
